--- a/templates/agent.yaml.j2
+++ b/templates/agent.yaml.j2
@@ -1,7 +1,7 @@
-server: "https://{{ server.address }}:9345" # TODO: use lb address
+server: "https://{{ hostvars[inventory_hostname]['groups']['loadbalancer_internal']|first }}:9345" # TODO: use lb address
 data-dir: {{ data_dir }}
 token: {{ rke2_join_token }}
-node-name: {{ inventory_hostname }}
+node-name: {{ inventory_hostname | replace("_", "-") }}
 kubelet-arg:
 {{ kubelet.args | to_nice_yaml(indent=4) }}
 systemd-default-registry: {{ registry.default }}
