--- a/templates/server.yaml.j2
+++ b/templates/server.yaml.j2
@@ -1,6 +1,16 @@
 {% if inventory_hostname != groups["master"]|first %}
+
 server: "https://{{ hostvars[inventory_hostname]['groups']['loadbalancer_internal']|first }}:9345"
+{% if s3_backup.enabled %}
+etcd-s3: true
+etcd-s3-endpoint: {{ s3_backup.endpoint }}
+etcd-s3-bucket: {{ s3_backup.bucket }}
+etcd-s3-region: {{ s3_backup.region }}
+etcd-s3-access-key: {{ etcd_s3_aws_access_key_id }}
+etcd-s3-secret-key: {{ etcd_s3_aws_secret_access_key }}
+{% end %}
 {% endif %}
+
 tls-san:
   - {{ server.address }}
   - {{ hostvars[inventory_hostname]['groups']['loadbalancer_external']|first }}
