--- a/templates/cilium-config.yaml.j2
+++ b/templates/cilium-config.yaml.j2
@@ -6,7 +6,9 @@ metadata:
   namespace: kube-system
 spec:
   valuesContent: |-
-    kubeProxyReplacement: disabled
+    kubeProxyReplacement: strict
+    k8sServiceHost: {{ hostvars[inventory_hostname]['groups']['loadbalancer_internal']|first }}
+    k8sServicePort: 6443
     # we don't expect to have a prometheus installation by default
     prometheus:
       enabled: false
