Add node-ip to configuration

--- a/templates/server.yaml.j2
+++ b/templates/server.yaml.j2
@@ -42,3 +42,4 @@ systemd-default-registry: {{ registry.default }}
 cni: {{ cni }}
 token: {{ rke2_join_token }}
 disable-kube-proxy: true
+node-ip: {{ node_ip }}
